--- a/style.css
+++ b/style.css
@@ -156,6 +156,12 @@ p {
    }
 }
 
+@media (max-width: 450px) {
+   body {
+      margin: 50px 0;
+   }
+}
+
 @media (max-width: 350px) {
    h1 {
       font-size: 24px;
